[gd_scene load_steps=15 format=3 uid="uid://gii3k1sf5a0g"]

[ext_resource type="Script" path="res://scenes/codeblock/codeblock.gd" id="1_bsghr"]
[ext_resource type="Theme" uid="uid://bxy7sal2n5myb" path="res://themes/codeblock.tres" id="1_t3j6a"]
[ext_resource type="PackedScene" uid="uid://c3k8rw3uw8brw" path="res://scenes/draggable/draggable.tscn" id="2_257dc"]
[ext_resource type="Texture2D" uid="uid://d25gw4ykvbt48" path="res://textures/gui/brackets_start.png" id="2_h00s7"]
[ext_resource type="Texture2D" uid="uid://dg47eu548eljn" path="res://textures/gui/top_bar_end.png" id="4_utwus"]
[ext_resource type="Texture2D" uid="uid://daegepgbdg8b1" path="res://textures/gui/inventory_indicator.png" id="6_0nt10"]
[ext_resource type="Script" path="res://scripts/target_indicator.gd" id="6_uci2p"]
[ext_resource type="Texture2D" uid="uid://t4njwwdc6cn8" path="res://textures/gui/brackets_wall.png" id="7_2w8yo"]
[ext_resource type="Texture2D" uid="uid://b2flp35cpwf4q" path="res://textures/items/GRAY_BARRIER.png" id="7_rhlld"]
[ext_resource type="Script" path="res://scripts/action_indicator.gd" id="8_4c3ql"]
[ext_resource type="Texture2D" uid="uid://nsyoxst3is2a" path="res://textures/gui/brackets_end.png" id="8_643jp"]
[ext_resource type="Texture2D" uid="uid://onxtmnbw0ivk" path="res://textures/items/OAK_SIGN.png" id="9_3o5sj"]
[ext_resource type="Texture2D" uid="uid://6he5qd1j5g6w" path="res://textures/gui/bottom_bar_end.png" id="9_d6ot5"]
[ext_resource type="Script" path="res://scripts/inventory_indicator.gd" id="11_saocm"]

[node name="Codeblock" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
offset_right = 178.0
offset_bottom = 56.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("1_t3j6a")
script = ExtResource("1_bsghr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="Top" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="Draggable" parent="VBoxContainer/Top" instance=ExtResource("2_257dc")]
layout_mode = 2

[node name="Texture" type="PanelContainer" parent="VBoxContainer/Top"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Top/Texture"]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="VBoxContainer/Top/Texture/HBoxContainer"]
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Top/Texture/HBoxContainer/Control"]
layout_mode = 2
offset_right = 48.0
offset_bottom = 36.0
mouse_filter = 2
texture = ExtResource("2_h00s7")
stretch_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Top/Texture/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource("4_utwus")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Info" type="PanelContainer" parent="VBoxContainer/Top"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Top/Info"]
layout_mode = 2
mouse_filter = 2

[node name="Spacer" type="PanelContainer" parent="VBoxContainer/Top/Info/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="CodeblockName" type="Label" parent="VBoxContainer/Top/Info/HBoxContainer"]
layout_mode = 2
text = "MISSINGNO."

[node name="Spacer2" type="PanelContainer" parent="VBoxContainer/Top/Info/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="TargetIndicator" type="HBoxContainer" parent="VBoxContainer/Top/Info/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("6_uci2p")

[node name="TargetButton" type="TextureButton" parent="VBoxContainer/Top/Info/HBoxContainer/TargetIndicator"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
texture_normal = ExtResource("7_rhlld")
ignore_texture_size = true
stretch_mode = 4

[node name="Spacer" type="PanelContainer" parent="VBoxContainer/Top/Info/HBoxContainer/TargetIndicator"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="ActionIndicator" type="HBoxContainer" parent="VBoxContainer/Top/Info/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("8_4c3ql")

[node name="ActionButton" type="TextureButton" parent="VBoxContainer/Top/Info/HBoxContainer/ActionIndicator"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
texture_normal = ExtResource("9_3o5sj")
ignore_texture_size = true
stretch_mode = 4

[node name="Spacer" type="PanelContainer" parent="VBoxContainer/Top/Info/HBoxContainer/ActionIndicator"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="InventoryIndicator" type="HBoxContainer" parent="VBoxContainer/Top/Info/HBoxContainer"]
layout_mode = 2
script = ExtResource("11_saocm")

[node name="InventoryButton" type="TextureButton" parent="VBoxContainer/Top/Info/HBoxContainer/InventoryIndicator"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_0nt10")
ignore_texture_size = true
stretch_mode = 4

[node name="Spacer" type="PanelContainer" parent="VBoxContainer/Top/Info/HBoxContainer/InventoryIndicator"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Bracket" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Bracket"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Bracket/HBoxContainer"]
custom_minimum_size = Vector2(16, 6)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
texture = ExtResource("7_2w8yo")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Contents" type="PanelContainer" parent="VBoxContainer/Bracket/HBoxContainer"]
layout_mode = 2

[node name="End" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Texture" type="PanelContainer" parent="VBoxContainer/End"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/End/Texture"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/End/Texture/HBoxContainer"]
custom_minimum_size = Vector2(48, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/End/Texture/HBoxContainer/Control"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
texture = ExtResource("8_643jp")
stretch_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/End/Texture/HBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource("9_d6ot5")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Draggable" parent="VBoxContainer/End" instance=ExtResource("2_257dc")]
layout_mode = 2

[node name="Attached" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[connection signal="pressed" from="VBoxContainer/Top/Info/HBoxContainer/TargetIndicator/TargetButton" to="VBoxContainer/Top/Info/HBoxContainer/TargetIndicator" method="_on_target_button_pressed"]
[connection signal="gui_input" from="VBoxContainer/Top/Info/HBoxContainer/ActionIndicator/ActionButton" to="VBoxContainer/Top/Info/HBoxContainer/ActionIndicator" method="_on_panel_container_gui_input"]
[connection signal="pressed" from="VBoxContainer/Top/Info/HBoxContainer/ActionIndicator/ActionButton" to="VBoxContainer/Top/Info/HBoxContainer/ActionIndicator" method="_on_action_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Top/Info/HBoxContainer/InventoryIndicator/InventoryButton" to="VBoxContainer/Top/Info/HBoxContainer/InventoryIndicator" method="_on_inventory_button_pressed"]
